Fix audit encryption header for KMS / KMIP

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 6.0.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Security 2022-02-21, Security 2022-03-07, Security 2022-03-21
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Currently the audit encryption header is missing two fields in the keystore ID struct - the KMIP server name and port. The mongo node also does not handle the case where cloud passes in an entire KMS "keystoreID" struct. We should make the mongo node compliant to the audit encryption design.

            Assignee:
            Shreyas Kalyan (Inactive)
            Reporter:
            Shreyas Kalyan (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: