SERVER-63626 Fix audit encryption header for KMS / KMIP

GitOrigin-RevId: 30bd0300c8ccd07b1bafa562664e6b450fd79027