src/mongo/db/modules/enterprise/jstests/audit/lib/audit_encryption.js
@@ -213,6 +213,8 @@ function isValidKeyStoreIdentifier(keyStoreId, keyStoreType) {
         properties = [
             "provider",
             "keyWrapMethod",
+            "kmipServerName",
+            "kmipPort",
             "uid",
         ];
         provider = "kmip";
